force-app/main/default/objects/Grain_Payment__c/Grain_Payment__c.object-meta.xml
<CustomObject>
    <description>Object to house Grain Payment records, to be exposed on the Grower&apos;s Portal Community, coming in from AGBOSS.</description>
    <label>Grain Payment</label>
    <nameField>
        <label>Grain Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grain Payments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>