force-app/main/default/objects/Grain_Payment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account to indicate the Payee of the Grain Payment</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grain Payments</relationshipLabel>
    <relationshipName>Grain_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>