force-app/main/default/objects/Grain_Payment__c/fields/DAFF_Levy__c.field-meta.xml
<CustomField>
    <fullName>DAFF_Levy__c</fullName>
    <description>Currency field to house DAFF Levy deducted from Grain Payment, coming in from AGBOSS.</description>
    <label>DAFF Levy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>