force-app/main/default/objects/Grain_Payment__c/fields/Deduction_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Including_GST__c</fullName>
    <description>Currency field to house deduction from the payment, coming in from AGBOSS.</description>
    <label>Deduction (Including GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>