force-app/main/default/objects/Grain_Payment__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Object to house the delivery which the Grain Payment is related to, coming in from AGBOSS.</description>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Grain Payments</relationshipLabel>
    <relationshipName>Grain_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>