force-app/main/default/objects/Grain_Payment__c/fields/EPR_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>EPR_Including_GST__c</fullName>
    <description>Currency field to house EPR data, coming in from AGBOSS.</description>
    <label>EPR (Including GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>