force-app/main/default/objects/Grain_Payment__c/fields/Grain_Payment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Grain_Payment_External_ID__c</fullName>
    <description>External ID field for Grain Payment in AGBOSS.</description>
    <label>Grain Payment External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>