force-app/main/default/objects/Grain_Payment__c/fields/Grower_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Grower_s_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Grower Card to Indicate the Grower&apos;s number, coming in from AGBOSS.</description>
    <label>Grower&apos;s Number</label>
    <referenceTo>Grower_s_Card__c</referenceTo>
    <relationshipLabel>Grain Payments</relationshipLabel>
    <relationshipName>Grain_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>