force-app/main/default/objects/Grain_Payment__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date field to house the Invoice Date information, coming in from AGBOSS.</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>