force-app/main/default/objects/Grain_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date field to house when the Payee was paid, coming in from AGBOSS.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>