force-app/main/default/objects/Grain_Payment__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <description>Text field to house Payment Number, coming in from AGBOSS.</description>
    <label>Payment Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>