force-app/main/default/objects/Grain_Payment__c/fields/Split_Payment__c.field-meta.xml
<CustomField>
    <fullName>Split_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if grain payment is split payment, coming in from AGBOSS.</description>
    <label>Split Payment</label>
    <type>Checkbox</type>
</CustomField>