force-app/main/default/objects/Grain_Payment__c/fields/Split_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Payment_Percentage__c</fullName>
    <description>Percent field to indicate the split payment percentage for a given grain payment, coming in from AGBOSS.</description>
    <label>Split Payment Percentage</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>