force-app/main/default/objects/Grain_Payment__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>Currency field to house how much was paid to the grower/deliverer of grain, coming in from AGBOSS.</description>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>