force-app/main/default/objects/Grain_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery__c</columns>
    <columns>Total_Paid__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>